full-moon/tests/cases/fail/parser/numeric-for-4/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/numeric-for-4
---
error[ast]: expected `end` to close numeric for loop block
  ┌─ source.lua:1:15
  │
1 │ for x = 1, 10 do
  │               ^^


